tests/multiple_ingress_objects_with_different_ports_new/diff_output_from_multiple_ingress_objects_with_different_ports.txt
Connectivity diff:
diff-type: changed, source: {ingress-controller}, destination: ingressworld/ingress-world-multiple-ports[Deployment], dir1:  TCP 8050,8090, dir2: TCP 8000,8090
